pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod                # REQUIRED
  labels:
    app: my-app
spec:
  containers:                 # REQUIRED
    - name: my-container      # REQUIRED
      image: nginx            # REQUIRED
      ports:                  # optional
        - containerPort: 80
      env:                    # optional
        - name: ENV_VAR
          value: value
      resources:              # optional
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "250m"
          memory: "256Mi"
  restartPolicy: Always       # optional (default: Always)
