service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: my-app
spec:
  type: ClusterIP               # optional (default)
  selector:
    app: my-app                 # REQUIRED
  ports:
    - port: 80                  # REQUIRED
      targetPort: 8080          # optional (defaults to 'port')
      protocol: TCP             # optional (default: TCP)
