networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
spec:
  podSelector: {}              # REQUIRED
  policyTypes:
    - Ingress                  # REQUIRED
  ingress:                     # optional (depends on policyTypes)
    - from:
        - podSelector: {}
